--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <!-- rama susan -->
     <meta charset="UTF-8">
@@ -7,7 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+        background-color: aliceblue;
+    }
+</style>
 <body>
-    <h2>Duoliingo</h2> 
+    <h1>pepe</h1>
+    <h1>pepe</h1>
+    <h1>pepe</h1>  
+    <h2>Duoliingo</h2>     
 </body>
 </html>
+
+<!-- pepe comentario -->
